<resources>
    <string name="app_name">UnStuck</string>
    <string name="new_category">New Category</string>
    <string name="social_media">Social Media:</string>
    <string name="entertainment">Entertainment:</string>
    <string name="back">Back</string>
    <string name="apps_screen">Apps Screen</string>
    <string name="main_screen">Main Screen</string>
    <string name="apps">Apps</string>
</resources>